--- a/Projects/MGR/package.json
+++ b/Projects/MGR/package.json
@@ -1,6 +1,7 @@
 {
   "name": "mgr",
   "version": "1.0.0",
+  "type": "module",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,7 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.21.2"
-  },
-  "type": "module"
+    "express": "^4.21.2",
+    "mongoose": "^8.9.3"
+  }
 }
