--- a/Projects/MGR/package.json
+++ b/Projects/MGR/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "express": "^4.21.2",
-    "mongoose": "^8.9.3"
+    "mongoose": "^8.9.3",
+    "morgan": "^1.10.0"
   }
 }
