--- a/Projects/MGR/package.json
+++ b/Projects/MGR/package.json
@@ -11,6 +11,9 @@
   "description": "",
   "dependencies": {
     "express": "^4.21.2",
+    "express-graphql": "^0.12.0",
+    "express-validator": "^7.2.1",
+    "graphql": "^15.9.0",
     "mongoose": "^8.9.3",
     "morgan": "^1.10.0"
   }
